--- a/index.html
+++ b/index.html
@@ -16,26 +16,18 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Dynamite</h1>
-        <p class="header">Lightweight web framework on top of Cowboy: a dynamite powered Cowboy</p>
+        <div id="logo"><h1 class="header">Dynamite</h1></div>
+        <p class="header">Lightweight web framework on top of Cowboy server</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/j-pel/dynamite/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/j-pel/dynamite/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/j-pel/dynamite">View On GitHub</a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/j-pel">j-pel</a></p>
-
-
       </header>
       <section>
-        <h1>
-<a id="dynamite-web-framework" class="anchor" href="#dynamite-web-framework" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Dynamite (web framework)</h1>
 
-<p>Lightweight web framework on top of Cowboy: a dynamite powered Cowboy</p>
-
-<p>This is a responsive and lightweight web framework written in Elixir that run on top of the <a href="http://ninenines.eu/docs/en/cowboy/HEAD/guide/introduction/">Cowboy web server</a></p>
+<p>A responsive and lightweight web framework written in Elixir that run on top of the <a href="http://ninenines.eu/docs/en/cowboy/HEAD/guide/introduction/">Cowboy web server</a></p>
 
 <p>The scope of this project is to offer a dynamic environment with simple but powerful and up-to-date tools where several sites could be hosted at the same time, sharing resources when needed but with a safe and clear separation of scopes.</p>
 
@@ -114,9 +106,6 @@
 
 <p>This code is released under the MIT license.  See LICENSE.</p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
 		
