--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Dynamite by j-pel</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <script src="javascripts/scale.fix.js"></script>
+    <link rel="stylesheet" href="stylesheets/simple.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -18,16 +15,17 @@
       <header>
         <div id="logo"><h1 class="header">Dynamite</h1></div>
         <p class="header">Lightweight web framework on top of Cowboy server</p>
-
+        <p>
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/j-pel/dynamite/zipball/master">Download ZIP</a></li>
           <li class="download"><a class="buttons" href="https://github.com/j-pel/dynamite/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/j-pel/dynamite">View On GitHub</a></li>
         </ul>
+        </p><br /><br /><br />
       </header>
       <section>
 
-<p>A responsive and lightweight web framework written in Elixir that run on top of the <a href="http://ninenines.eu/docs/en/cowboy/HEAD/guide/introduction/">Cowboy web server</a></p>
+<p>A responsive and lightweight web framework written in Elixir that runs on top of the <a href="http://ninenines.eu/docs/en/cowboy/HEAD/guide/introduction/">Cowboy web server</a></p>
 
 <p>The scope of this project is to offer a dynamic environment with simple but powerful and up-to-date tools where several sites could be hosted at the same time, sharing resources when needed but with a safe and clear separation of scopes.</p>
 
